syntax = "proto3";

package go.micro.srv.order;

message SubmitRequest{
  uint32 productId = 1;
  uint32 count = 2;
  uint32 uid = 3;
}
message Response{
  string ode = 1;
  string msg = 2;
}
message OrderDetailRequest{
  string ordeId = 1;
}
service OrderService{
  rpc Submit(SubmitRequest) returns (SubmitRequest){}
  rpc OrderDetail(OrderDetailRequest) returns(Response){}
}