syntax = "proto3";

package go.micro.srv.product;

message Product{
  uint32 id = 1;
  string name = 2;
  string intor = 3;
  uint32 number = 4;
}

message SerchRequest{
  string name = 1;
}
message SerchResponse{
  string code = 1;
  string msg = 2;
  repeated Product product = 3;

}
message DetailRequest{
  uint32 id = 1;
}
message DetailResponse{
  string code = 1;
  string msg = 2;
  Product product = 3;
}
message ReduceNumberRequest{
  uint32 id = 1;
}
message ReduceNumberResponse{
  string code = 1;
  string msg = 2;
}

service ProductService{
  rpc SerchR(SerchRequest) returns (SerchResponse){}
  rpc Detail(DetailRequest) returns (DetailResponse){}
  rpc ReduceNumber(ReduceNumberRequest) returns(ReduceNumberResponse){}
}